--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.10.0"
+  },
+  "scripts": {
+    "dev": "node index.js",
+    "start": "node index.js"
   }
 }
