--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "nodemailer": "^6.10.0"
   },
   "scripts": {
-    "dev": "node index.js",
+    "dev": "nodemon index.js",
     "start": "node index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
